@@ -65,6 +65,9 @@ class SiftsSummaryProviderTests(unittest.TestCase):
         pfamIdL = su.getIdentifiers("102M", "A", "PFAMID")
         self.assertEqual(len(pfamIdL), 1)
         #
+        uniqueUniprotL = su.getUniqueIdentifiers(idType="UNPID")
+        logger.info("Unique UniProt identifiers %d", len(uniqueUniprotL))
+        #
         if abbreviated == "PROD":
             iproIdL = su.getIdentifiers("102M", "A", "IPROID")
             self.assertEqual(len(iproIdL), 4)
